--- a/TestRealm/Config/DefaultGame.ini
+++ b/TestRealm/Config/DefaultGame.ini
@@ -1,2 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AC38E3D6477A58AE2E11C1A6CCF2C7AA
+bUseBorderlessWindow=True
+bShouldWindowPreserveAspectRatio=True
+
